--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -1,9 +1,8 @@
 .hero {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   padding-inline: 5vw;
   position: relative;
-  // background: url("./ibro.jpg");
   background-size: cover;
   background-position: bottom;
   touch-action: none;
