--- a/src/Style/Subpages.scss
+++ b/src/Style/Subpages.scss
@@ -102,7 +102,6 @@
     width: fit-content;
     max-width: 50%;
     min-width: 49%;
-
   }
   .bDetail {
     // text-align: justify;
@@ -116,7 +115,7 @@
       text-align: right;
       margin-bottom: 1rem;
     }
-    &>p{
+    & > p {
       white-space: pre-line;
     }
   }
@@ -869,6 +868,10 @@
       margin-block: -2rem;
       // translate: -50% -50%;
     }
+  }
+  .contact {
+    width: 100%;
+    height: 100dvh;
   }
 }
 
